# gpunfa-artifact

./: README.md  gen_figures.sh  run_experiments_get_table3.sh  setup.sh
gpunfa_code/: CMakeLists.txt
gpunfa_code/include/clara/: clara.hpp  clara_textflow.hpp
gpunfa_code/include/commons/: NFA.h  NFALoader.h  SymbolStream.h  common_func.h  compatible_group_helper.h  graph_helper.h  nfa_utils.h  node.h  report_formatter.h  vasim_helper.h
gpunfa_code/include/gpunfautils/: abstract_gpunfa.h  array2.h  common.h  utils.h
gpunfa_code/include/pugixml/: pugiconfig.hpp
gpunfa_code/scripts/: collect_results.py  launch_exps.py  llcommons.py
gpunfa_code/scripts/configs/: app_spec  exec_config_bfs  exec_config_table3
gpunfa_code/scripts/ploting/: abs_throughput_table.py  ap_estimator_ideal.py  applications.xlsx  helpers.py
gpunfa_code/src/commons/: NFA.cpp  NFALoader.cpp  SymbolStream.cpp  common_func.cpp  compatible_group_helper.cpp  graph_helper.cpp  nfa_utils.cpp  node.cpp  report_formatter.cpp  vasim_helper.cpp
gpunfa_code/src/gpunfautils/: abstract_gpunfa.cu  common.cpp  utils.cu
gpunfa_code/src/infant/: device_funcs.h  infant.cu  infant.h  infant_config.h  infant_kernels.cu  infant_kernels.h  main.cu
gpunfa_code/src/obat/: Makefile  main.cu  one_byte_a_time_kernels.h  one_byte_at_a_time.cu  one_byte_at_a_time.h  option_config.h
gpunfa_code/src/ppopp12/: main.cu  ppopp12.cu  ppopp12.h  ppopp12_kernels.cu  ppopp12_kernels.h  ppopp12_option.h
small_dataset/: apple.anml  inputstream.txt
